# QTM

./: README.md  pyproject.toml  requirements.txt
quickmergepp/: __init__.py
quickmergepp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quickmergepp/cuda/: kmeans_cuda.cpp  kmeans_cuda_kernel.cu
quickmergepp/quickmerge/: ar_prior.py  baselines.py  entropy.py  kmeans_cuda.py  merge.py  model_adapters.py  multimodal.py  pipeline.py  speculative.py
scripts/: bench_kmeans.py  bench_methods.py  bench_speculative.py  demo.py  examples_multimodal.py  examples_real_models.py
